@@ -15,6 +15,13 @@ New features added
        if name.startswith('_'):
            return True
 
+* Markup:
+
+  - The ``toctree`` directive now supports a ``:hidden:`` flag,
+    which will prevent links from being generated in place of
+    the directive -- this allows you to define your document
+    structure, but place the links yourself.
+
 * Configuration:
 
   - The new ``html_add_permalinks`` config value can be used to
